Trying out a fix for right-hand whitespace (setting html, body to width/height 100%)

--- a/resources/css/queries.css
+++ b/resources/css/queries.css
@@ -46,7 +46,11 @@
 .prog-flex-item {
     flex: 1 1 100%;
 }
-    
+
+.section-main{
+    height: auto;
+    }
+
 }
 
 /*----Small phones 0 to 480px----*/
