--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -19,6 +19,15 @@ html {
 }
 
 
+html,body
+{
+    width: 100%;
+    height: 100%;
+    margin: 0px;
+    padding: 0px;
+    overflow-x: hidden; 
+}
+
 /*-----------------------------------*/
 /*GENERAL*/
 /*-----------------------------------*/
@@ -122,6 +131,9 @@ a:active {
 /*HEADER */
 /*-----------------------------------*/
 
+header {
+    background-color: #3e3e3e;
+}
 .my-nav {
     background-color: #000000;
 }
